--- a/src/css/home.css
+++ b/src/css/home.css
@@ -187,8 +187,11 @@
 
   .matchgame-card__image-container__team-logos{
     position: relative;
-    bottom: 4rem;
+    bottom: 4.5rem;
+    width: 100%;
+    height: 4.5rem;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     flex-direction: row;
     background-color: var(--nav-color-transparent);
