--- a/src/css/carrousel.css
+++ b/src/css/carrousel.css
@@ -8,6 +8,17 @@
     height: 28rem ;
 }
 
+.carrousel-container-item-title{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800;
+    color: var(--nav-color);
+}
+
+.carrousel-container-item-text{
+    font-family: 'Poppins', sans-serif;
+    color: var(--nav-color);
+}
+
 @media screen and (max-width: 900px) {
   
     .carrousel-container{
