--- a/src/css/home.css
+++ b/src/css/home.css
@@ -167,6 +167,7 @@
     margin-bottom: 0.5rem;
     display: flex;
     flex-direction: column;
+    font-family: 'Poppins', sans-serif;
     width: 15rem;
     height: 26rem;
     box-shadow: black 0 0 5px;
@@ -266,9 +267,9 @@
     align-self: center;
     width: 100%;
     height: 80%;
-    
     border: none;
     font-family: 'Poppins', sans-serif;
+    font-weight: 800;
     border-radius: 15px;
     transition: background-color 0.2s;
   }
