--- a/src/css/pagewrapper.css
+++ b/src/css/pagewrapper.css
@@ -20,13 +20,13 @@
     width: 100%;
     height: 5.5rem;
     display: flex;
-    position: sticky;
+    position: fixed;
     justify-content: center;
     z-index: 1000;
     top: 0px;
     flex-direction: column;
     background-color: var(--nav-color);
-    transition : background 0.5s;
+    transition : background 0.5s, height 0.5s;
   }
   
   .page__wrapper__navbar {
@@ -77,7 +77,7 @@
   
   .page__wrapper__navbar__list__item {
     display: flex;
-    width: 5rem;
+    width: 4rem;
     height: 70%;
     list-style-type: none;
     color: var(--nav-enterprise-color);
@@ -120,11 +120,12 @@
   }
 
 .home__nav__cart__icon__info{
-  margin-top: 35px;
+  margin-top: 4.2vh;
   margin-left: 30px;
   position: fixed;
   text-align: center;
   font-size: 62%;
+  font-weight: 800;
   color: var(--bg-color-transparent);
   z-index: 100;
   width: 1rem;
@@ -136,5 +137,10 @@
   @media screen and (max-width: 900px) {
     .page__wrapper__navbar__container{
       width: 80%;
+    }
+
+    .page__wrapper__navbar__enterpriseName {
+      width: 10rem;
+      height: 70%;
     }
   }
