--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -13,6 +13,19 @@
     background-color: var(--bg-color);
 }
 
+.cart__container__section__back{
+    font-family: 'Poppins', sans-serif;
+}
+  
+.text-body {
+    text-decoration: none;
+    font-weight: 600;
+}
+  
+.text-body:hover {
+    
+}
+
 .cart__client__details__icon{
     color: var(--text-color);
 }
