--- a/src/css/stadium.css
+++ b/src/css/stadium.css
@@ -4,6 +4,7 @@
     display:flex;
     flex-direction: column;
     align-items:center;
+    margin-right: 2rem;
   }
   
   
@@ -241,6 +242,7 @@
     .matchgametickets_stadium {
       width: 25rem;
       height: 20rem;
+      margin-right: 0;
     }
   }
 
@@ -249,5 +251,6 @@
     .matchgametickets_stadium {
       width: 19rem;
       height: 15rem;
+      margin-right: 0;
     }
   }
