Final styling fixes

--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -20,7 +20,7 @@
   
 .text-body {
     text-decoration: none;
-    font-weight: 600;
+    font-weight: 500;
 }
   
 .text-body:hover {
@@ -33,7 +33,7 @@
 }
 
 .cart__item__teams{
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .cart__item__text{
@@ -72,15 +72,13 @@
 }
 
 .cart__checkout__button {
-    width: 90%;
+    width: 50%;
     height: 60%;
     text-align: center;
-    font-weight: 800;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-top: 2rem;
     border: none;
-    background-color: var(--button-color);
+    background-color: var(--price-color-light);
     transition: background-color 0.5s;
 }
 
@@ -89,9 +87,11 @@
 }
 
 .cart__checkout__button__text{
-    font-size:x-large;
-    font-weight: 500;
-    color: var(--nav-color);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 1.3rem;
+    color: var(--text-color);
+    text-shadow: black 0 0 3px;
 }
 
 .cart__checkout__button__text__price{
@@ -108,7 +108,7 @@
 
 @media screen and (max-width: 900px) {
     .cart__checkout__button{
-        min-width: 70%;
+        min-width: 60%;
     }
 
     .cart__item{
