--- a/src/css/pagewrapper.css
+++ b/src/css/pagewrapper.css
@@ -99,8 +99,10 @@
   
   .page__wrapper__navbar__cart{
     width: 3rem;
-    height: 100%;
+    height: 50%;
     text-decoration: none;
+    margin-top: auto;
+    margin-bottom: auto;
     display: flex;
     justify-content: center;
   }
@@ -111,7 +113,7 @@
     text-align: center;
     color: var(--nav-enterprise-color);
     width: 100%;
-    height: 70%;
+    height: 75%;
     transition: text-shadow 0.2s ease-in-out;
   }
   
@@ -120,7 +122,7 @@
   }
 
 .home__nav__cart__icon__info{
-  margin-top: 35px;
+  margin-top: 25px;
   margin-left: 30px;
   position: absolute;
   text-align: center;
@@ -141,5 +143,14 @@
     .page__wrapper__navbar__enterpriseName {
       width: 10rem;
       height: 70%;
+    }
+
+    .page_wrapper__navbar__cart__icon{
+      font-size: 125%;
+    }
+
+    .home__nav__cart__icon__info{
+      margin-top: 22px;
+      margin-left: 25px;
     }
   }
