--- a/src/css/home.css
+++ b/src/css/home.css
@@ -273,13 +273,14 @@
   }
   
   .matchgame-card__button{
-    background-color: var(--button-color);
+    background-color: var(--nav-enterprise-color);
+    color: var(--nav-color);
     align-self: center;
     width: 100%;
-    height: 90%;
+    height: 80%;
     border: none;
     font-family: 'Poppins', sans-serif;
-    font-weight: 600;
+    font-weight: 300;
     border-radius: 15px;
     transition: background-color 0.2s;
   }
