--- a/src/css/matchgamebuytickets.css
+++ b/src/css/matchgamebuytickets.css
@@ -236,6 +236,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   font-family: 'Poppins', sans-serif;
+  font-weight: 300;
   color:var(--nav-enterprise-color);
   background-color:var(--nav-color);
   transition: background 0.5s;
