--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,6 +15,7 @@
   --stadium-color:rgb(20, 20, 43);
   --hover-color:#f8f1b0;
   --info-section-color:#2b2b41;
+  --transparent: rgba(0,0,0,0);
 }
 
 body {
