--- a/src/css/pagewrapper.css
+++ b/src/css/pagewrapper.css
@@ -77,9 +77,10 @@
   
   .page__wrapper__navbar__list__item {
     display: flex;
-    width: 4rem;
+    width: 5rem;
     height: 70%;
     list-style-type: none;
+    margin-left: 1rem;
     color: var(--nav-enterprise-color);
     border-radius: 10px;
     transition: box-shadow 0.2s ease-in-out;
@@ -104,22 +105,34 @@
   }
   
   .page__wrapper__navbar__cart{
-    width: 3rem;
-    height: 50%;
+    width: 4.5rem;
+    height: 4.5rem;
     text-decoration: none;
-    margin-top: auto;
-    margin-bottom: auto;
+    border-radius: 100% 100%;
+    background-color: var(--nav-color-transparent);
     display: flex;
+    position: fixed;
+    box-shadow: black 0 0 5px;
+    z-index: 100;
+    bottom: 2rem;
+    right: 2rem;
     justify-content: center;
+    align-items: center;
+    transition: background 0.2s;
+  }
+
+  .page__wrapper__navbar__cart:hover{
+    background-color: var(--nav-color);
   }
   
   .page_wrapper__navbar__cart__icon{
     margin-top: auto;
-    font-size: 150%;
+    font-size: 170%;
     text-align: center;
+    align-self: center;
     color: var(--nav-enterprise-color);
     width: 100%;
-    height: 75%;
+    height:70%;
     transition: text-shadow 0.2s ease-in-out;
   }
   
@@ -142,8 +155,13 @@
 }
 
   @media screen and (max-width: 900px) {
+
+    .page__wrapper__navbar{
+      justify-content: center;
+    }
+
     .page__wrapper__navbar__container{
-      width: 80%;
+      width: 50%;
     }
 
     .page__wrapper__navbar__enterpriseName {
@@ -151,12 +169,12 @@
       height: 70%;
     }
 
-    .page_wrapper__navbar__cart__icon{
-      font-size: 125%;
+    .page__wrapper__navbar__list{
+      width: 40%;
     }
 
-    .home__nav__cart__icon__info{
-      margin-top: 22px;
-      margin-left: 25px;
+    .page__wrapper__navbar__list__item{
+      width: 3rem;
+      font-size: 0.8rem;
     }
   }
