--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -105,6 +105,35 @@
     color: var(--notification-color);
 }
 
+.cart__checkout__auth-container{
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cart__checkout__auth-container__text{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    color: var(--nav-enterprise-color);
+}
+
+.cart__checkout__auth-container__button{
+    height: 3rem;
+    width: 10rem;
+    border-style: none;
+    border-radius: 10px;
+    background-color: var(--nav-enterprise-color);
+    margin-top: 1rem;
+    transition: background 0.2s;
+}
+
+.cart__checkout__auth-container__button:hover{
+    background-color: var(--hover-color);
+}
+
 @media screen and (max-width: 900px) {
     .cart__checkout__button{
         min-width: 60%;
@@ -118,5 +147,9 @@
 
     .cart__item__part{
         margin-top: 1rem;
+    }
+
+    .cart__checkout__auth-container__text{
+        font-size: 0.8rem;
     }
 }
