--- a/src/css/userorders.css
+++ b/src/css/userorders.css
@@ -4,6 +4,8 @@
     background-color: var(--bg-color);
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .userorders__container__body{
@@ -11,8 +13,25 @@
     min-height: 90vh;
     border-radius: 10px;
     border: solid grey 1px;
-    margin-top: 10rem;
+    margin-top: 1rem;
     margin-bottom: 10rem;
+    display: flex;
+    justify-content: center;
+}
+
+.userorders__container__advice-text{
+    width: 85%;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    margin-top: 2rem;
+    color: var(--nav-color);
+    font-size: large;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    text-shadow: black 0 0 2px;
 }
 
 .userorders__container__body__results{
@@ -21,8 +40,24 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    align-items: center;
     gap: 1rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.userorders__container__body__results_advice-text{
+    width: 15rem;
+    height: 4rem;
+    position: absolute;
+    top: 20rem;
+    text-align: center;
+    margin-top: 3rem;
+    color: var(--notification-color);
+    font-size: large;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+    text-shadow: black 0 0 2px;
 }
 
 .userorders__container__body__results__order{
@@ -41,27 +76,30 @@
 .userorders__container__body__results__order__top{
     height: 25%;
     width: 95%;
-    background-color: var(--nav-enterprise-color);
-    border-radius: 10px;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
+    border-top: solid var(--nav-enterprise-color) 1px;
+    border-bottom: solid var(--nav-enterprise-color) 1px;
     align-items: center;
     justify-content: space-evenly;
 }
 
 .userorders__container__body__results__order__top__text{
-  color: var(--nav-color);
+  color: var(--nav-enterprise-color);
   font-family: 'Poppins', sans-serif;
   text-shadow: black 0 0 2px;
-  font-weight: 400;
+  font-weight: 200;
 }
 
 .userorders__container__body__results__order__ticketdetails-container{
     width: 95%;
     height: 50%;
+    align-items: center;
+    border-radius: 5px;
+    margin: 0;
+    padding: 5px;
     overflow-y: scroll;
-    padding: 5px 5px;
     background-color: var(--nav-color);
 }
 
@@ -69,7 +107,7 @@
     height: 10rem;
     width: 100%;
     margin-top: 1rem;
-    background-color: var(--nav-color);
+    background-color: var(--nav-enterprise-color);
     border-radius: 10px;
     border: solid var(--nav-enterprise-color) 1px;
 }
@@ -84,7 +122,7 @@
 }
 
 .userorders__container__body__results__order__ticketdetails-container__item__body__text{
-  color: var(--nav-enterprise-color);
+  color: var(--nav-color);
   font-family: 'Poppins', sans-serif;
   font-weight: 200;
 }
@@ -112,4 +150,30 @@
 
 .userorders__container__body__results__order__bottom__pay-button:hover{
     background-color: var(--hover-color);
+}
+
+.userorders__container__body__results__order__bottom__paid-order-advice{
+    width: 50%;
+    height: 80%;
+    border-radius: 10px;
+    border-style: none;
+    color: var(--price-color);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+    .userorders__container__body__results__order__ticketdetails-container__item__body__text{
+        font-size: small;
+    }
+
+    .userorders__container__body{
+        width: 95%;
+    }
+
+    .userorders__container__body__results{
+        width: 85%;
+    }
 }
